<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- Splash -->
    <string name="splash_header_main">Weather</string>
    <string name="splash_header_secondary">Forecast</string>
    <string name="signature">Developed by Vladyslav Kuzminov</string>
    <!-- Auth -->
    <string name="auth_header_main">Detailed Forecast</string>
    <string name="auth_header_secondary">Get in - depth weather information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- Menu Drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_location">Location</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Sed feedback</string>
    <string name="menu_rate">Rate this app</string>
    <!-- Home Fragment | Current Weather -->
    <string name="feels_like">Feels Like %1$s</string>
    <string name="wind">Wind %s km/h</string>
    <string name="unit_celsius">°C</string>
    <string name="unit_fahrenheit">°F</string>
    <!-- Home Fragment | Hourly Weather -->
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="degree_sign">°</string>
    <!-- Settings Fragment -->
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
</resources>